starting to combine the objects together

--- a/ministering-app/src/app/app.component.html
+++ b/ministering-app/src/app/app.component.html
@@ -6,6 +6,6 @@
   <img width="150" alt="Angular Logo" src="https://image.flaticon.com/icons/svg/381/381801.svg">
 </div>
 <h2>Elders:</h2>
-
+<a (click)=getEldersTable()>Click</a>
 <h2>Households:</h2>
 
